time blocks and script js

--- a/index.html
+++ b/index.html
@@ -30,6 +30,60 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+
+      <ul class="row col-12" data-time="9">
+        <div class="hour col-1">9AM</div>
+        <textarea class="description col-10"></textarea>
+        <button class="saveBtn col-1">⚿</button>
+      </ul>
+
+      <ul class="row col-12" data-time="10">
+        <div class="hour col-1">10AM</div>
+        <textarea class="description col-10"></textarea>
+        <button class="saveBtn col-1">⚿</button>
+      </ul>
+
+      <ul class="row col-12" data-time="11">
+        <div class="hour col-1">11AM</div>
+        <textarea class="description col-10"></textarea>
+        <button class="saveBtn col-1">⚿</button>
+      </ul>
+
+      <ul class="row col-12" data-time="12">
+        <div class="hour col-1">12PM</div>
+        <textarea class="description col-10"></textarea>
+        <button class="saveBtn col-1">⚿</button>
+      </ul>
+
+      <ul class="row col-12" data-time="13">
+        <div class="hour col-1">1PM</div>
+        <textarea class="description col-10"></textarea>
+        <button class="saveBtn col-1">⚿</button>
+      </ul>
+
+      <ul class="row col-12" data-time="14">
+        <div class="hour col-1">2PM</div>
+        <textarea class="description col-10"></textarea>
+        <button class="saveBtn col-1">⚿</button>
+      </ul>
+
+      <ul class="row col-12" data-time="15">
+        <div class="hour col-1">3PM</div>
+        <textarea class="description col-10"></textarea>
+        <button class="saveBtn col-1">⚿</button>
+      </ul>
+
+      <ul class="row col-12" data-time="16">
+        <div class="hour col-1">4PM</div>
+        <textarea class="description col-10"></textarea>
+        <button class="saveBtn col-1">⚿</button>
+      </ul>
+
+      <ul class="row col-12" data-time="17">
+        <div class="hour col-1">5PM</div>
+        <textarea class="description col-10"></textarea>
+        <button class="saveBtn col-1">⚿</button>
+      </ul>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
