per hour,functions, if statments

--- a/index.html
+++ b/index.html
@@ -29,61 +29,222 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <!-- Timeblocks go here per hour -->
+      <!-- 9 am -->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">09:00 AM</span>
+        </div>
+        <textarea
+          value=""
+          id="comment9am"
+          type="text"
+          cols="100"
+          rows="2"
+          class="form-control description textarea"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            id="button9am"
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
 
-      <ul class="row col-12" data-time="9">
-        <div class="hour col-1">9AM</div>
-        <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1">⚿</button>
-      </ul>
+      <!-- 10 am-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">10:00 AM</span>
+        </div>
+        <textarea
+          id="comment10am"
+          value=""
+          type="text"
+          cols="100"
+          rows="2"
+          class="form-control description textarea"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            id="button10am"
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
 
-      <ul class="row col-12" data-time="10">
-        <div class="hour col-1">10AM</div>
-        <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1">⚿</button>
-      </ul>
+      <!--11 am-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">11:00 AM</span>
+        </div>
+        <textarea
+          id="comment11am"
+          value=""
+          type="text"
+          cols="100"
+          rows="2"
+          class="form-control description textarea"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            id="button11am"
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
 
-      <ul class="row col-12" data-time="11">
-        <div class="hour col-1">11AM</div>
-        <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1">⚿</button>
-      </ul>
+      <!--12 pm-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">12:00 PM</span>
+        </div>
+        <textarea
+          id="comment12pm"
+          value=""
+          type="text"
+          cols="100"
+          rows="2"
+          class="form-control description textarea"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            id="button12pm"
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
 
-      <ul class="row col-12" data-time="12">
-        <div class="hour col-1">12PM</div>
-        <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1">⚿</button>
-      </ul>
+      <!--1 pm-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">01:00 PM</span>
+        </div>
+        <textarea
+          id="comment1pm"
+          value=""
+          type="text"
+          cols="100"
+          rows="2"
+          class="form-control description textarea"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            id="button1pm"
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
 
-      <ul class="row col-12" data-time="13">
-        <div class="hour col-1">1PM</div>
-        <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1">⚿</button>
-      </ul>
+      <!--2 pm-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">02:00 PM</span>
+        </div>
+        <textarea
+          id="comment2pm"
+          value=""
+          type="text"
+          cols="100"
+          rows="2"
+          class="form-control description textarea"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            id="button2pm"
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
 
-      <ul class="row col-12" data-time="14">
-        <div class="hour col-1">2PM</div>
-        <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1">⚿</button>
-      </ul>
+      <!--3 pm-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">03:00 PM</span>
+        </div>
+        <textarea
+          id="comment3pm"
+          value=""
+          type="text"
+          cols="100"
+          rows="2"
+          class="form-control description textarea"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            id="button3pm"
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
 
-      <ul class="row col-12" data-time="15">
-        <div class="hour col-1">3PM</div>
-        <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1">⚿</button>
-      </ul>
+      <!--4 pm-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">04:00 PM</span>
+        </div>
+        <textarea
+          id="comment4pm"
+          value=""
+          type="text"
+          cols="100"
+          rows="2"
+          class="form-control description textarea"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            id="button4pm"
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
 
-      <ul class="row col-12" data-time="16">
-        <div class="hour col-1">4PM</div>
-        <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1">⚿</button>
-      </ul>
-
-      <ul class="row col-12" data-time="17">
-        <div class="hour col-1">5PM</div>
-        <textarea class="description col-10"></textarea>
-        <button class="saveBtn col-1">⚿</button>
-      </ul>
+      <!-- 5pm-->
+      <div class="input-group mb-3">
+        <div class="input-group-prepend row">
+          <span class="input-group-text hour">05:00 PM</span>
+        </div>
+        <textarea
+          id="comment5pm"
+          value=""
+          type="text"
+          cols="100"
+          rows="2"
+          class="form-control description textarea"
+        ></textarea>
+        <div class="input-group-append">
+          <button
+            id="button5pm"
+            class="btn btn-outline-secondary saveBtn"
+            type="button"
+          >
+            <i class="fas fa-save"></i>
+          </button>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
